--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript" ></script>
 		<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="a8zq40gtw0w9wjy" type="text/javascript" ></script>
 		<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.1-latest.js" type="text/javascript"></script>
+		<script src="js/cmsApi.js" type="text/javascript"></script>
+		<script src="js/cmsApplicationApi.js" type="text/javascript"></script>
+		<script src="js/cmsExampleUsage.js" type="text/javascript"></script>
 		<title>Dropbox Api sample app - Drop-ins</title>
 	</head>
 
@@ -24,12 +27,6 @@
 
 		<h5>loaded from data store images header</h5>
 		<div id="loadedImages"></div>
-
-		<script src="js/cmsApi.js" type="text/javascript"></script>
-
-		<!--<div id="container">-->
-			<!--<img id="sampleImage" src="" width="100px" height="100px" placeholder="image goes here">-->
-		<!--</div>-->
 	</body>
 
 </html>
