--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript" ></script>
 		<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="a8zq40gtw0w9wjy" type="text/javascript" ></script>
 		<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.1-latest.js" type="text/javascript"></script>
-		<script src="js/cmsApi.js" type="text/javascript"></script>
+		<script src="../dropboxCmsApi.js" type="text/javascript"></script>
+
 		<script src="js/cmsApplicationApi.js" type="text/javascript"></script>
 		<script src="js/cmsExampleUsage.js" type="text/javascript"></script>
 		<title>Dropbox Api sample app - Drop-ins</title>
